# aizap

./: .gitguardian.yaml  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: agent-deploy.yml  app-deploy.yml  ci-typescript.yaml  infra-plan.yml  infra-release.yml
app/adk/: pyproject.toml  requirements.txt  test_db.py
app/adk/agents/health_advisor/: .env.example  __init__.py  agent.py  app.py  models.py  rakuten_recipe_api.py  schemas.py  utils.py
app/adk/agents/health_advisor/db/: README.md  test_db.py
app/adk/agents/health_advisor/db/models/: __init__.py  base.py  diet_log.py  goal.py  habit.py  user_session.py
app/adk/agents/health_advisor/db/repositories/: __init__.py  base.py  diet_log.py  exercise_log.py  goal.py  habit.py
app/adk/agents/health_advisor/sub_agents/: __init__.py  db_sample.py  exercise_manager.py  goal_setting.py  meal_record.py  pre_meal_advisor.py  recipe_generator.py
app/adk/agents/health_advisor/tools/: README.md  __init__.py  exercise_log_tools.py  habit_tools.py  util_tools.py
app/adk/db/: README.md  __init__.py  config.py  test_db.py
app/adk/db/models/: exercise_log.py  goal.py
app/adk/db/repositories/: __init__.py  user_session.py
app/adk/utils/: __init__.py  logger.py
app/bff/: .env.example  .eslintrc.cjs  .eslintrc.json  Dockerfile  README.md  main.py  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json
app/worker/: .dockerignore  .env.sample  .prettierrc  Dockerfile  README.md  main.py  package.json  pnpm-lock.yaml  (+3 more)
docs/: architecture.md  cicd.md  database.md  development.md
(+79 files in other folders)
